Add not working authentication